--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,32 @@
-<h2>Sign up</h2>
+<div class="row">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
-    <%= f.input :password_confirmation, required: true %>
+  <div class="col-xs-12 col-sm-6 text-center">
+    <br /><br />
+    <p class="hidden-xs">
+      <br /><br /><br />
+    </p>
+    <p class="col-xs-12">
+      Already have an account?
+    </p>
+    <br />
+    <br />
+    <%= link_to "Log in an existing account", new_user_session_path, class: 'btn btn-lg btn-primary'  %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
+  <div class="col-xs-12 col-sm-6">
+    <h2>Sign up</h2>
+    <%= bootstrap_form_for(resource, url: user_registration_path) do |f| %>
+      <%= f.error_notification %>
+      <%= f.input :first_name, required: true, autofocus: true %>
+      <%= f.input :last_name, required: true  %>
+      <%= f.input :email, required: true %>
+      <%= f.input :postal_address, required: true, as: :string %>
+      <%= f.input :password, required: true, placeholder: ("#{@minimum_password_length} characters minimum" if @validatable) %>
+      <%= f.input :confirm_password, required: true %>
 
-<%= render "devise/shared/links" %>
+       <%= f.button :submit, "Sign up", class: 'col-xs-12 btn btn-info' %>
+
+    <% end %>
+  </div>
+
+</div>
