dog needs space above it on mobile devices

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,6 +13,7 @@
         </p>
       </div>
       <div class="col-xs-12 col-md-6 text-right">
+        <div class="visible-xs visible-sm"><br /><br /></div>
         <%= image_tag asset_path('dog_lying_down.png'), height: 250 %>
       </div>
     </div>
