--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -29,3 +29,19 @@ input.radio_buttons {
     margin-right: 0;
   }
 }
+.no-margin {
+  margin: 0;
+}
+.input .error {
+  display: inline;
+  padding: .2em .6em .3em;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25em;
+  background-color:#d9534f
+}
