--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,27 +1,23 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<h2>Edit Details</h2>
+<%= bootstrap_form_for(resource, as: resource_name, url: user_registration_path, html: { method: :put }) do |f| %>
   <%= f.error_notification %>
+  <div class="row">
+    <div class="col-xs-12 col-sm-6">
+      <%= f.input :first_name, required: true, autofocus: true %>
+      <%= f.input :last_name, required: true  %>
+      <%= f.input :postal_address, required: true, as: :string %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+    <div class="col-xs-12 col-sm-6">
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
+      <%= f.input :email, required: true %>
+      <%= f.input :password, autocomplete: "off", placeholder: "leave this blank if you don't want to change it", required: false %>
+      <%= f.input :password_confirmation, placeholder: "leave this blank if you don't want to change it", required: false %>
+    
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
+  <%= f.input :current_password, placeholder: "we need your current password to confirm your changes", required: true %>
+  <%= f.button :submit, "Update", class: 'btn btn-success col-xs-12' %>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
