--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,6 +18,20 @@
           <li class="<%= 'active' if current_page? user_path(current_user) %>">
             <%= link_to current_user.name, user_path(current_user) %>
           </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">My Dogs <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <% unless current_user.dogs.present? %>
+                <li class="dropdown-header">No dogs registered</li>
+              <% else %>
+                <% current_user.dogs.each do |dog| %>
+                  <li><%= link_to dog.name, user_dog_path(current_user, dog) %></li>
+                <% end %>
+                <li class="divider"></li>
+              <% end %>
+              <li><%= link_to "Register New", new_user_dog_path(current_user) %></li>
+            </ul>
+          </li>
         </ul>
       <% else %>
         <%= bootstrap_form_for(:user, url: user_session_path, :html => { class: 'navbar-form navbar-right', role: 'form' }) do |f| %>
