can renew dog registrations now

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -32,6 +32,12 @@ input.radio_buttons {
 .no-margin {
   margin: 0;
 }
+.margin-10 {
+  margin: 10px;
+}
+.strong {
+  font-weight: 700;
+}
 .input .error {
   display: inline;
   padding: .2em .6em .3em;
