--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,8 @@
     <br />
     <%= link_to 'Settings', edit_user_registration_path, class: 'btn btn-default' %>
     <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'btn btn-danger' %>
+    <br /><br />
+    <%= link_to "Delete account", user_path, data: { confirm: "Are you sure you want to delete your account?" }, method: :delete %></p>
   </div>
 </div>
 
