--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
   <body>
 
     <%= render 'layouts/navigation' %>
-    <div class="container">
+    <div class="container-fluid">
       <%= render 'layouts/alerts' %>
       <%= yield %>
     </div>
