--- a/app/views/dogs/edit.html.erb
+++ b/app/views/dogs/edit.html.erb
@@ -4,6 +4,6 @@
   <%= f.error_notification %>
   <%= f.input :name %>
   <%= f.input :breed %>
-  <%= f.input :date_of_birth, as: :date %>
+  <%= f.input :date_of_birth, as: :date, start_year: (DateTime.current.year - 50), end_year: DateTime.current.year %>
   <%= f.button :submit, "Update", class: "col-xs-12 btn btn-success" %>
 <% end %>
