call to action changes depending on logged in

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -34,7 +34,7 @@
                 <% end %>
                 <li class="divider"></li>
               <% end %>
-              <li><%= link_to "Register New", new_user_dog_path(current_user) %></li>
+              <li><%= link_to "Register New Dog", new_user_dog_path(current_user) %></li>
             </ul>
           </li>
         </ul>
