--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,8 +9,11 @@
         </p>
         <br />
         <p>
-          <% register_link = user_signed_in? ? new_user_dog_path(current_user) : new_user_registration_path %>
-          <%= link_to " REGISTER NOW", register_link, class: 'btn btn-primary btn-lg col-xs-12', role: 'button'  %>
+          <% if user_signed_in? %>
+            <%= link_to " REGISTER YOUR DOG NOW", new_user_dog_path(current_user), class: 'btn btn-primary btn-lg col-xs-12', role: 'button'  %>
+          <% else %>
+            <%= link_to " REGISTER NOW", new_user_registration_path, class: 'btn btn-primary btn-lg col-xs-12', role: 'button'  %>
+          <% end %>
         </p>
       </div>
       <div class="col-xs-12 col-md-6 text-right">
